--- a/test/fixtures/orders.yml
+++ b/test/fixtures/orders.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  customer: 
+  customer: one
 
 two:
-  customer: 
+  customer: two
